build-files/artic/1.6.2/README.md
# artic fieldbioinformatics container

Main tool : [artic](https://github.com/artic-network/fieldbioinformatics)

Full documentation: [https://github.com/artic-network/fieldbioinformatics](https://github.com/artic-network/fieldbioinformatics)

<details>

<summary>Additional tools installed via micromamba:</summary>

```
  Name                     Version       Build                   Channel    
──────────────────────────────────────────────────────────────────────────────
  _libgcc_mutex            0.1           conda_forge             conda-forge
  _openmp_mutex            4.5           2_gnu                   conda-forge
  abseil-cpp               20210324.2    h9c3ff4c_0              conda-forge
  absl-py                  2.1.0         pyhd8ed1ab_1            conda-forge
  aiohappyeyeballs         2.6.1         pyhd8ed1ab_0            conda-forge
  aiohttp                  3.11.14       py39h9399b63_0          conda-forge
  aiosignal                1.3.2         pyhd8ed1ab_0            conda-forge
  amply                    0.1.6         pyhd8ed1ab_1            conda-forge
  args                     0.1.0         pyhd8ed1ab_1004         conda-forge
  artic                    1.6.2         pyhdfd78af_0            bioconda   
  astunparse               1.6.3         pyhd8ed1ab_3            conda-forge
  async-timeout            5.0.1         pyhd8ed1ab_1            conda-forge
  attrs                    25.3.0        pyh71513ae_0            conda-forge
  bcftools                 1.17          h3cc50cf_1              bioconda   
  biopython                1.85          py39h8cd3c5a_1          conda-forge
  blinker                  1.9.0         pyhff2d567_0            conda-forge
  blosc                    1.21.5        h0f2a231_0              conda-forge
  brotli                   1.1.0         hb9d3cd8_2              conda-forge
  brotli-bin               1.1.0         hb9d3cd8_2              conda-forge
  brotli-python            1.1.0         py39hf88036b_2          conda-forge
  bwa                      0.7.18        he4a0461_1              bioconda   
  bzip2                    1.0.8         h4bc722e_7              conda-forge
  c-ares                   1.34.4        hb9d3cd8_0              conda-forge
  c-blosc2                 2.12.0        hb4ffafa_0              conda-forge
  ca-certificates          2025.1.31     hbcca054_0              conda-forge
  cached-property          1.5.2         hd8ed1ab_1              conda-forge
  cached_property          1.5.2         pyha770c72_1            conda-forge
  cachetools               5.5.2         pyhd8ed1ab_0            conda-forge
  certifi                  2025.1.31     pyhd8ed1ab_0            conda-forge
  cffi                     1.14.4        py39he88106c_0          conda-forge
  charset-normalizer       3.4.1         pyhd8ed1ab_0            conda-forge
  clair3                   1.0.10        py39hd649744_1          bioconda   
  click                    8.1.8         pyh707e725_0            conda-forge
  clint                    0.5.1         py_1                    conda-forge
  coin-or-cbc              2.10.12       h8b142ea_1              conda-forge
  coin-or-cgl              0.60.7        h516709c_0              conda-forge
  coin-or-clp              1.17.8        h1ee7a9c_0              conda-forge
  coin-or-osi              0.108.10      haf5fa05_0              conda-forge
  coin-or-utils            2.11.11       hee58242_0              conda-forge
  coincbc                  2.10.12       2_metapackage           conda-forge
  colorama                 0.4.6         pyhd8ed1ab_1            conda-forge
  coloredlogs              15.0.1        pyhd8ed1ab_4            conda-forge
  colormath                3.0.0         pyhd8ed1ab_4            conda-forge
  contourpy                1.3.0         py39h74842e3_2          conda-forge
  cryptography             39.0.0        py39hd598818_0          conda-forge
  cycler                   0.12.1        pyhd8ed1ab_1            conda-forge
  cyvcf2                   0.30.16       py39h3ba1b09_1          bioconda   
  docutils                 0.21.2        pyhd8ed1ab_1            conda-forge
  exceptiongroup           1.2.2         pyhd8ed1ab_1            conda-forge
  expat                    2.6.4         h5888daf_0              conda-forge
  fonttools                4.56.0        py39h9399b63_0          conda-forge
  freetype                 2.12.1        h267a509_2              conda-forge
  frozenlist               1.5.0         py39h9399b63_1          conda-forge
  future                   1.0.0         pyhd8ed1ab_2            conda-forge
  gast                     0.6.0         pyhd8ed1ab_0            conda-forge
  gawk                     5.3.1         hcd3d067_0              conda-forge
  gdbm                     1.18          h0a1914f_2              conda-forge
  giflib                   5.2.2         hd590300_0              conda-forge
  gmp                      6.3.0         hac33072_2              conda-forge
  google-auth              2.38.0        pyhd8ed1ab_0            conda-forge
  google-auth-oauthlib     0.4.6         pyhd8ed1ab_0            conda-forge
  google-pasta             0.2.0         pyhd8ed1ab_2            conda-forge
  grpc-cpp                 1.43.2        h9e046d8_3              conda-forge
  grpcio                   1.43.0        py39hff7568b_0          conda-forge
  gsl                      2.7           he838d99_0              conda-forge
  h2                       4.2.0         pyhd8ed1ab_0            conda-forge
  h5py                     3.9.0         nompi_py39h4dfffb9_100  conda-forge
  hdf5                     1.14.0        nompi_h5231ba7_103      conda-forge
  hpack                    4.1.0         pyhd8ed1ab_0            conda-forge
  htslib                   1.17          h6bc39ce_1              bioconda   
  humanfriendly            10.0          pyh707e725_8            conda-forge
  humanize                 4.12.1        pyhd8ed1ab_0            conda-forge
  hyperframe               6.1.0         pyhd8ed1ab_0            conda-forge
  icu                      70.1          h27087fc_0              conda-forge
  idna                     3.10          pyhd8ed1ab_1            conda-forge
  importlib-metadata       8.6.1         pyha770c72_0            conda-forge
  importlib-resources      6.5.2         pyhd8ed1ab_0            conda-forge
  importlib_resources      6.5.2         pyhd8ed1ab_0            conda-forge
  iniconfig                2.0.0         pyhd8ed1ab_1            conda-forge
  isa-l                    2.31.1        hb9d3cd8_1              conda-forge
  jinja2                   3.1.6         pyhd8ed1ab_0            conda-forge
  jpeg                     9e            h0b41bf4_3              conda-forge
  k8                       0.2.5         hdcf5f25_4              bioconda   
  keras                    2.8.0         pyhd8ed1ab_0            conda-forge
  keras-preprocessing      1.1.2         pyhd8ed1ab_1            conda-forge
  keyutils                 1.6.1         h166bdaf_0              conda-forge
  kiwisolver               1.4.7         py39h74842e3_0          conda-forge
  krb5                     1.20.1        hf9c8cef_0              conda-forge
  lcms2                    2.12          hddcbb42_0              conda-forge
  ld_impl_linux-64         2.43          h712a8e2_4              conda-forge
  libaec                   1.1.3         h59595ed_0              conda-forge
  libasprintf              0.23.1        h8e693c7_0              conda-forge
  libblas                  3.9.0         31_h59b9bed_openblas    conda-forge
  libbrotlicommon          1.1.0         hb9d3cd8_2              conda-forge
  libbrotlidec             1.1.0         hb9d3cd8_2              conda-forge
  libbrotlienc             1.1.0         hb9d3cd8_2              conda-forge
  libcblas                 3.9.0         31_he106b2a_openblas    conda-forge
  libcurl                  7.87.0        h6312ad2_0              conda-forge
  libdeflate               1.23          h4ddbbb0_0              conda-forge
  libedit                  3.1.20250104  pl5321h7949ede_0        conda-forge
  libev                    4.33          hd590300_2              conda-forge
  libexpat                 2.6.4         h5888daf_0              conda-forge
  libffi                   3.2.1         he1b5a44_1007           conda-forge
  libgcc                   14.2.0        h767d61c_2              conda-forge
  libgcc-ng                14.2.0        h69a702a_2              conda-forge
  libgettextpo             0.23.1        h5888daf_0              conda-forge
  libgfortran              14.2.0        h69a702a_2              conda-forge
  libgfortran-ng           14.2.0        h69a702a_2              conda-forge
  libgfortran5             14.2.0        hf1ad2bd_2              conda-forge
  libgomp                  14.2.0        h767d61c_2              conda-forge
  liblapack                3.9.0         31_h7ac8fdf_openblas    conda-forge
  liblapacke               3.9.0         31_he2f377e_openblas    conda-forge
  liblzma                  5.6.4         hb9d3cd8_0              conda-forge
  libnghttp2               1.51.0        hdcd2b5c_0              conda-forge
  libopenblas              0.3.29        pthreads_h94d23a6_0     conda-forge
  libpng                   1.6.43        h2797004_0              conda-forge
  libprotobuf              3.19.6        h3eb15da_0              conda-forge
  libsqlite                3.46.0        hde9e2c9_0              conda-forge
  libssh2                  1.10.0        haa6b8db_3              conda-forge
  libstdcxx                14.2.0        h8f9b012_2              conda-forge
  libstdcxx-ng             14.2.0        h4852527_2              conda-forge
  libtiff                  4.2.0         hf544144_3              conda-forge
  libwebp-base             1.5.0         h851e524_0              conda-forge
  libxcrypt                4.4.36        hd590300_1              conda-forge
  libzlib                  1.2.13        h4ab18f5_6              conda-forge
  lz4-c                    1.9.4         hcb278e6_0              conda-forge
  lzo                      2.10          hd590300_1001           conda-forge
  lzstring                 1.0.4         pyhd8ed1ab_1003         conda-forge
  mafft                    7.526         h4bc722e_0              conda-forge
  markdown                 3.6           pyhd8ed1ab_0            conda-forge
  markdown-it-py           3.0.0         pyhd8ed1ab_1            conda-forge
  markupsafe               3.0.2         py39h9399b63_1          conda-forge
  matplotlib-base          3.9.4         py39h16632d1_0          conda-forge
  mdurl                    0.1.2         pyhd8ed1ab_1            conda-forge
  minimap2                 2.28          he4a0461_3              bioconda   
  mpfr                     4.2.1         h90cbb55_3              conda-forge
  multidict                6.2.0         py39h9399b63_0          conda-forge
  multiqc                  1.19          pyhdfd78af_0            bioconda   
  munkres                  1.1.4         pyh9f0ad1d_0            conda-forge
  ncurses                  6.5           h2d0b736_3              conda-forge
  networkx                 3.2.1         pyhd8ed1ab_0            conda-forge
  nomkl                    1.0           h5ca1d4c_0              conda-forge
  numexpr                  2.10.2        py39h0a7e20a_100        conda-forge
  numpy                    1.26.4        py39h474f0d3_0          conda-forge
  oauthlib                 3.2.2         pyhd8ed1ab_1            conda-forge
  olefile                  0.47          pyhd8ed1ab_1            conda-forge
  openjpeg                 2.4.0         hb52868f_1              conda-forge
  openssl                  1.1.1w        hd590300_0              conda-forge
  opt_einsum               3.4.0         pyhd8ed1ab_1            conda-forge
  packaging                24.2          pyhd8ed1ab_2            conda-forge
  pandas                   2.2.3         py39h3b40f6f_2          conda-forge
  parallel                 20191122      0                       conda-forge
  pbzip2                   1.1.13        h1fcc475_2              conda-forge
  perl                     5.32.1        7_hd590300_perl5        conda-forge
  pigz                     2.8           h2797004_0              conda-forge
  pillow                   8.2.0         py39hf95b381_1          conda-forge
  pip                      25.0.1        pyh8b19718_0            conda-forge
  pluggy                   1.5.0         pyhd8ed1ab_1            conda-forge
  propcache                0.2.1         py39h9399b63_1          conda-forge
  protobuf                 3.19.6        py39h227be39_0          conda-forge
  pulp                     2.8.0         py39hf3d152e_0          conda-forge
  py-cpuinfo               9.0.0         pyhd8ed1ab_1            conda-forge
  pyaml-env                1.2.2         pyhd8ed1ab_0            conda-forge
  pyasn1                   0.6.1         pyhd8ed1ab_2            conda-forge
  pyasn1-modules           0.4.1         pyhd8ed1ab_1            conda-forge
  pycparser                2.22          pyh29332c3_1            conda-forge
  pyfaidx                  0.8.1.3       pyhdfd78af_0            bioconda   
  pygments                 2.19.1        pyhd8ed1ab_0            conda-forge
  pyjwt                    2.10.1        pyhd8ed1ab_0            conda-forge
  pyopenssl                23.2.0        pyhd8ed1ab_1            conda-forge
  pyparsing                3.2.1         pyhd8ed1ab_0            conda-forge
  pypy3.6                  7.3.2         h45e8706_2              conda-forge
  pysam                    0.21.0        py39h9abd093_0          bioconda   
  pysocks                  1.7.1         pyha55dd90_7            conda-forge
  pytables                 3.8.0         py39hac3db9e_1          conda-forge
  pytest                   8.3.5         pyhd8ed1ab_0            conda-forge
  python                   3.9.0         h2a148a8_4_cpython      conda-forge
  python-dateutil          2.9.0.post0   pyhff2d567_1            conda-forge
  python-flatbuffers       25.2.10       pyhbc23db3_0            conda-forge
  python-isal              1.7.2         py39h8cd3c5a_0          conda-forge
  python-tzdata            2025.1        pyhd8ed1ab_0            conda-forge
  python-zlib-ng           0.4.3         py39h520f041_0          conda-forge
  python_abi               3.9           5_cp39                  conda-forge
  pytz                     2024.1        pyhd8ed1ab_0            conda-forge
  pyu2f                    0.1.5         pyhd8ed1ab_1            conda-forge
  pyvcf3                   1.0.3         pyhdfd78af_0            bioconda   
  pyyaml                   6.0.2         py39h9399b63_2          conda-forge
  qhull                    2020.2        h434a139_5              conda-forge
  re2                      2022.02.01    h9c3ff4c_0              conda-forge
  readline                 8.2           h8c095d6_2              conda-forge
  requests                 2.32.3        pyhd8ed1ab_1            conda-forge
  requests-oauthlib        2.0.0         pyhd8ed1ab_1            conda-forge
  rich                     13.9.4        pyhd8ed1ab_1            conda-forge
  rich-click               1.8.8         pyhd8ed1ab_0            conda-forge
  rsa                      4.9           pyhd8ed1ab_1            conda-forge
  samtools                 1.15.1        h6899075_1              bioconda   
  scipy                    1.13.1        py39haf93ffa_0          conda-forge
  seqtk                    1.4           he4a0461_2              bioconda   
  setuptools               75.8.2        pyhff2d567_0            conda-forge
  simplejson               3.20.1        py39h8cd3c5a_0          conda-forge
  six                      1.17.0        pyhd8ed1ab_0            conda-forge
  snappy                   1.1.10        hdb0a2a9_1              conda-forge
  spectra                  0.0.11        pyhd8ed1ab_2            conda-forge
  sqlite                   3.46.0        h6d4b2fc_0              conda-forge
  tensorboard              2.8.0         pyhd8ed1ab_1            conda-forge
  tensorboard-data-server  0.6.1         py39hd97740a_4          conda-forge
  tensorboard-plugin-wit   1.8.1         pyhd8ed1ab_0            conda-forge
  tensorflow               2.8.0         cpu_py39h4655687_0      conda-forge
  tensorflow-base          2.8.0         cpu_py39h7e02d9e_0      conda-forge
  tensorflow-estimator     2.8.0         cpu_py39heaff504_0      conda-forge
  termcolor                2.5.0         pyhd8ed1ab_1            conda-forge
  tk                       8.6.13        noxft_h4845f30_101      conda-forge
  tomli                    2.2.1         pyhd8ed1ab_1            conda-forge
  tqdm                     4.67.1        pyhd8ed1ab_1            conda-forge
  typing-extensions        4.12.2        hd8ed1ab_1              conda-forge
  typing_extensions        4.12.2        pyha770c72_1            conda-forge
  tzdata                   2025a         h78e105d_0              conda-forge
  unicodedata2             16.0.0        py39h8cd3c5a_0          conda-forge
  urllib3                  2.3.0         pyhd8ed1ab_0            conda-forge
  werkzeug                 3.1.3         pyhd8ed1ab_1            conda-forge
  whatshap                 1.7           py39h1f90b4d_1          bioconda   
  wheel                    0.45.1        pyhd8ed1ab_1            conda-forge
  wrapt                    1.17.2        py39h8cd3c5a_0          conda-forge
  xopen                    2.0.2         pyh707e725_2            conda-forge
  xz                       5.2.6         h166bdaf_0              conda-forge
  yaml                     0.2.5         h7f98852_2              conda-forge
  yarl                     1.18.3        py39h9399b63_1          conda-forge
  zipp                     3.21.0        pyhd8ed1ab_1            conda-forge
  zlib                     1.2.13        h4ab18f5_6              conda-forge
  zlib-ng                  2.0.7         h0b41bf4_0              conda-forge
  zstandard                0.23.0        py39h8cd3c5a_1          conda-forge
  zstd                     1.5.6         ha6fb4c9_0              conda-forge
```

</details>


There is also a very useful SOP: [https://artic.network/ncov-2019/ncov2019-bioinformatics-sop.html](https://artic.network/ncov-2019/ncov2019-bioinformatics-sop.html)
And additional documentation: [https://artic.readthedocs.io/en/latest/](https://artic.readthedocs.io/en/latest/)

> A bioinformatics pipeline for working with virus sequencing data sequenced with nanopore.

WARNING : This container does not contain the primer schemes found at [https://github.com/artic-network/primer-schemes](https://github.com/artic-network/primer-schemes). Those will have to be downloaded and mounted separately. There are now commands to download the use the primers at runtime.

This image DOES contain the medaka models downloaded with `artic_get_models`

## Example Usage with the artic primers

```bash
# filtering reads
artic guppyplex --min-length 400 --max-length 700  --directory . --prefix SRR22452250_1.fastq.gz --output SRR22452250_1_filtered.fastq

# downloading medaka models for clair3
artic_get_models

# running the artic minion workflow
# the result files will all start with test*
artic minion --normalise 200 --medaka-model ont --threads 4 --read-file sample.fastq --scheme-directory primer-schemes --scheme-version 5.3.2 nCoV-2019 test

# running the artic minion workflow with user-provided primer bedfiles and references
artic minion --normalise 200 --threads 4  --model ont --read-file sample.fastq --scheme-name sars-cov-2  --scheme-version  V5.3.2 name

```

In general, any primer scheme can be used as long as it meets [artic's requirements](https://github.com/artic-network/primer-schemes).

## Medaka models

Artic uses [Clair3](https://github.com/HKU-BAL/Clair3), which uses medaka models. Medaka updates frequently, and artic can throw errors when corresponding ONT models are not found.

These are the medaka models in this image:

```bash
# included models at /opt/conda/envs/artic/bin/models
hifi
hifi_revio
hifi_sequel2
ilmn
ont
ont_guppy5
r1041_e82_260bps_fast_g632
r1041_e82_260bps_hac_g632
r1041_e82_260bps_hac_v400
r1041_e82_260bps_hac_v410
r1041_e82_260bps_sup_g632
r1041_e82_260bps_sup_v400
r1041_e82_260bps_sup_v410
r1041_e82_400bps_fast_g632
r1041_e82_400bps_hac_g615
r1041_e82_400bps_hac_g632
r1041_e82_400bps_hac_v400
r1041_e82_400bps_hac_v410
r1041_e82_400bps_hac_v420
r1041_e82_400bps_hac_v430
r1041_e82_400bps_hac_v500
r1041_e82_400bps_sup_g615
r1041_e82_400bps_sup_v400
r1041_e82_400bps_sup_v410
r1041_e82_400bps_sup_v420
r1041_e82_400bps_sup_v430
r1041_e82_400bps_sup_v500
r104_e81_hac_g5015
r104_e81_sup_g5015
r941_prom_hac_g360+g422
r941_prom_sup_g5014
```
